# sayo

./: CMakeCache.txt  CMakeLists.txt  Cargo.toml  Makefile  cmake_install.cmake  etest.kk  expr.kk  infer.kk  interpret.kk  main.kk  types.kk  utest.kk  value.kk
.koka/v3.1.2-vscode/gcc-debug-5869ec/: etest.c  etest.h  etest.kki  expr.c  expr.h  expr.kki  infer.c  infer.h  infer.kki  interpret.c  interpret.h  interpret.kki  main.c  main.h  main.kki  main__main.c  main__main.h  main__main.kki  std_core.c  std_core_console.c  std_core_debug.c  std_core_exn.c  std_core_list.c  std_core_maybe.c  std_core_show.c  std_core_sslice.c  std_core_sslice.h  std_core_vector.c  std_num_float64.c  std_num_int32.c  std_num_int32.h  std_num_int32.kki  std_num_int64.c  std_num_int64.kki  std_num_random.c  std_num_random.h  std_num_random.kki  std_text_parse.c  std_text_parse.h  types.c  (+7 more)
.koka/v3.1.2-vscode/gcc-drelease-677884/: interpret.c  interpret.h  interpret.kki  main.c  main__main.c  main__main.h  main__main.kki  std_core.c  std_core.h  std_core.kki  std_core_bool.kki  std_core_debug.c  std_core_debug.kki  std_core_delayed.c  std_core_delayed.h  std_core_delayed.kki  std_core_either.c  std_core_either.h  std_core_either.kki  std_core_exn.c  std_core_exn.h  std_core_exn.kki  std_core_hnd.c  std_core_hnd.h  std_core_hnd.kki  std_core_int.kki  std_core_list.c  std_core_list.h  (+39 more)
inc/: term.hpp  value.hpp
src/: CMakeLists.txt  Makefile  ast.rs  cmake_install.cmake  lib.rs  main.cpp  main.rs  parser.rs  sayo  term.cpp  value.cpp
test/: CMakeLists.txt  term-test.cpp  test.cpp
(+54 files in other folders)
